--- a/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
+++ b/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
@@ -97,3 +97,13 @@
   grid-template-columns: 1fr 4fr;
   gap: 4px;
 }
+
+.header {
+  display: grid;
+  grid-column: 1 / 3;
+  grid-template-columns: 1fr 5fr;
+}
+
+.menu {
+  display: grid;
+}
