--- a/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
+++ b/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
@@ -92,6 +92,10 @@
 
 /* SOLUTION */
 
+li {
+  list-style: none;
+}
+
 .container {
   display: grid;
   grid-template-columns: 1fr 4fr;
@@ -101,9 +105,10 @@
 .header {
   display: grid;
   grid-column: 1 / 3;
-  grid-template-columns: 1fr 5fr;
+  grid-template-columns: 1fr 4fr;
 }
 
-.menu {
+.menu>ul {
   display: grid;
+  grid-template-columns: repeat(4, 1fr);
 }
