--- a/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
+++ b/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
@@ -92,7 +92,8 @@
 
 /* SOLUTION */
 
-li {
+li,
+ul {
   list-style: none;
 }
 
@@ -105,7 +106,11 @@ li {
 .header {
   display: grid;
   grid-column: 1 / 3;
-  grid-template-columns: 1fr 4fr;
+  grid-template-columns: 1fr 2fr;
+}
+
+.menu {
+  align-self: center;
 }
 
 .menu>ul {
@@ -132,4 +137,27 @@ li {
 .side-content {
   display: grid;
   align-items: center;
+}
+
+.article {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 15px;
+}
+
+.card {
+  height: 200px;
+  padding: 5px;
+}
+
+p {
+  padding: 5px;
+}
+
+.footer {
+  grid-column: 1 / 3;
+}
+
+.logo {
+  justify-self: start;
 }
